syntax = "proto3";

import "user.proto";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse) {};
  rpc Login (LoginRequest) returns (AuthResponse) {};
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  optional string avatarUrl = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  optional user.User user = 1;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
  optional JwtPayload user = 3;
}

message JwtPayload {
  string sub = 1;
  string email = 2;
}