syntax = "proto3";

package user;

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
}

message GetUserByIdRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}